# jarvis-tts

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  env.template  pyproject.toml  requirements-dev.txt  requirements.txt  run-background.sh  run-dev.sh  run-prod.sh  run.sh  setup-piper.sh
.github/workflows/: test.yml
alembic/versions/: 002_seed_settings.py
app/: deps.py  main.py  service_config.py
app/db/: __init__.py  models.py  session.py
app/services/: __init__.py  settings_definitions.py  settings_service.py
tests/: __init__.py  conftest.py  test_deps.py  test_main.py  test_service_config.py  test_settings.py
